Avoid pushing an extra location change when un-collapsing content

--- a/src/components/Collapser.scss
+++ b/src/components/Collapser.scss
@@ -1,4 +1,8 @@
 .Collapser {
+    > a {
+        text-decoration: underline;
+        cursor: pointer;
+    }
     .collapsed {
         display: none;
     }
